--- a/example/src/app/app.component.html
+++ b/example/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="box-container" fxLayout="column" [ngStyle.lt-sm]="'min-height: 800px;'">
-  <div class="app-title">Simple example app for the ngx-perfect-scrollbar</div>
+  <div class="app-title">Simple example app for the ngx-not-perfect-scrollbar</div>
 
   <div class="info-container">
     You can change the type and control the Perfect Scrollbar element by clicking the buttons on the controls pane.
